--- a/.htaccess
+++ b/.htaccess
@@ -9,14 +9,26 @@
     FileETag MTime Size
     ExpiresActive On
     ExpiresDefault "access plus 0 minutes"
-    ExpiresByType image/ico "access plus 7 day"
-    ExpiresByType text/css "access plus 7 day"
-    ExpiresByType text/javascript "access plus 7 day"
+    ExpiresByType text/css "access plus 1 years"
+    ExpiresByType text/javascript "access plus 1 years"
+    ExpiresByType application/x-shockwave-flash "access plus 1 years"
+    ExpiresByType image/ico "access plus 1 years"
+    ExpiresByType image/gif "access plus 1 years"
+    ExpiresByType image/jpg "access plus 1 years"
+    ExpiresByType image/jpeg "access plus 1 years"
+    ExpiresByType image/bmp "access plus 1 years"
+    ExpiresByType image/png "access plus 1 years"
 </IfModule>
 
 <IfModule mod_deflate.c>
     AddOutputFilterByType DEFLATE text/plain text/html text/xml text/css application/xml application/xhtml+xml application/rss+xml application/javascript application/x-javascript application/x-font-ttf application/vnd.ms-fontobject font/opentype font/ttf font/eot font/otf
 </IfModule>
+
+<ifModule mod_headers.c>
+    <FilesMatch ".(flv|gif|jpg|jpeg|png|ico|swf|js|css|pdf|woff)$">
+        Header set Cache-Control "max-age=2592000, public"
+    </FilesMatch>
+</ifModule>
 
 <IfModule mod_rewrite.c>
     RewriteEngine On
