--- a/.htaccess
+++ b/.htaccess
@@ -35,5 +35,5 @@
     RewriteBase /
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^([^/].*)?$ /app/frontend/web/$1
+    RewriteRule ^([^/].*)?$ /app/frontend/web/$1 [L]
 </IfModule>
