--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,7 @@
 AddDefaultCharset UTF-8
 DefaultLanguage ru-RU
 Options All -ExecCGI -Indexes -Includes +FollowSymLinks
+ServerSignature Off
 
 <IfModule mod_autoindex.c>
     IndexIgnore */*
