--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,4 @@
 AddDefaultCharset UTF-8
-DefaultLanguage ru-RU
 Options All -ExecCGI -Indexes -Includes +FollowSymLinks
 ServerSignature Off
 
@@ -18,15 +17,15 @@ ServerSignature Off
     
     #кэшировать html и htm файлы на один день
     <FilesMatch "\.(html|htm)$">
-        Header set Cache-Control "max-age=43200"
+        Header set Cache-Control "max-age=43200, public"
     </FilesMatch>
     #кэшировать css, javascript и текстовые файлы на одну неделю
     <FilesMatch "\.(js|css|txt)$">
-        Header set Cache-Control "max-age=604800"
+        Header set Cache-Control "max-age=604800, public"
     </FilesMatch>
     #кэшировать флэш и изображения на месяц
     <FilesMatch "\.(flv|swf|ico|gif|jpg|jpeg|png)$">
-        Header set Cache-Control "max-age=2592000"
+        Header set Cache-Control "max-age=2592000, public"
     </FilesMatch>
     #отключить кэширование
     <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
