--- a/.htaccess
+++ b/.htaccess
@@ -11,19 +11,19 @@ ServerSignature Off
     Header unset ETag
     Header unset Last-Modified
     
-    #кэшировать html и htm файлы на один день
+    # html и files for a one day
     <FilesMatch "\.(html|htm)$">
         Header set Cache-Control "max-age=43200, public"
     </FilesMatch>
-    #кэшировать css, javascript и текстовые файлы на одну неделю
+    # css, javascript и planetext-files for a one week
     <FilesMatch "\.(js|css|txt)$">
         Header set Cache-Control "max-age=604800, public"
     </FilesMatch>
-    #кэшировать флэш и изображения на месяц
+    # flash for a month
     <FilesMatch "\.(flv|swf|ico|gif|jpg|jpeg|png)$">
         Header set Cache-Control "max-age=2592000, public"
     </FilesMatch>
-    #отключить кэширование
+    # disable cache for service files
     <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
         Header unset Cache-Control
     </FilesMatch>
@@ -31,22 +31,22 @@ ServerSignature Off
 
 <ifModule mod_expires.c>
     ExpiresActive On
-    #по умолчанию кеш в 5 секунд
+    # by default cache is 5 seconds
     ExpiresDefault "access plus 5 seconds"
-    #кэшировать флэш и изображения на месяц
+    # cache flash and images for a month
     ExpiresByType image/x-icon "access plus 2592000 seconds"
     ExpiresByType image/jpeg "access plus 2592000 seconds"
     ExpiresByType image/png "access plus 2592000 seconds"
     ExpiresByType image/gif "access plus 2592000 seconds"
     ExpiresByType application/x-shockwave-flash "access plus 2592000 seconds"
-    #кэшировать css, javascript и текстовые файлы на одну неделю
+    # cache css, javascript and planetext-files for a week
     ExpiresByType text/css "access plus 604800 seconds"
     ExpiresByType text/javascript "access plus 604800 seconds"
     ExpiresByType application/javascript "access plus 604800 seconds"
     ExpiresByType application/x-javascript "access plus 604800 seconds"
-    #кэшировать html и htm файлы на один день
+    # cache html and htm for a one day
     ExpiresByType text/html "access plus 43200 seconds"
-    #кэшировать xml файлы на десять минут
+    # cache xml for a ten minutes
     ExpiresByType application/xhtml+xml "access plus 600 seconds"
 </ifModule>
 
